# pml

./: .gitignore  README.md  pyproject.toml
src/pml/: app.py
src/pml/graphics/: plot.py
src/pml/model/: linear_regression.py
src/pml/regression/: linear.py
