[project]
name = "pml"
version = "0.1.0"
description = "Programming Machine Learning"
authors = [
    {name = "Giacomo Amoroso",email = "giacomo@amoroso.me"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
