[project]
name = "pml"
version = "0.1.0"
description = "Programming Machine Learning"

authors = [
    {name = "Giacomo Amoroso",email = "giacomo@amoroso.me"}
]

license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [ {path = "src/pml/resources/*", format = ['sdist'] } ]

[tool.poetry.scripts]
pml = "pml.app:main"